Passed tests for simple cases

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,4 @@
-export(addStrictPreferences)
-export(deleteStrictPreferences)
-export(addWeakPreferences)
-export(deleteWeakPreferences)
-export(addIndifferences)
-export(deleteIndifferences)
 export(buildProblem)
 export(calcSolution)
 import(Rglpk)
+import(sets)
