--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,12 @@
-Package: uta.mondisc
+Package: utanm
 Type: Package
 Title: Inferring additive value functions with unknown monotonicity
 Version: 0.1-1
 Date: 2014-08-02
 Author: Jakub Wasikowski
 Maintainer: Jakub Wasikowski <jakub.wasikowski@gmail.com>
-URL: https://github.com/Mostesz/uta.mondisc
-Depends:
-    Rglpk (>= 0.5-1),
-    sets (>= 1.0-13)
-Description: TODO
-License: TODO
-Suggests:
-    testthat (>= 0.7.1)
+URL: https://github.com/Mostesz/uta-nm
+Depends: Rglpk, sets, ROI, ROI.plugin.glpk
+Description: UTA-NM: Inferring additive value functions with unknown monotonicity
+License: file LICENSE
+Suggests: testthat
